# qbitbot

./: .gitignore  Cargo.toml  README.md  config.json.example
src/: bot.rs  config.rs  format.rs  main.rs  notify.rs  qb.rs  server.rs
