[package]
name = "qbitbot"
version = "0.1.0"
edition = "2021"
description = "qBittorrent Telegram bot with event-driven notifications"

[dependencies]
teloxide   = { version = "0.13", features = ["macros", "ctrlc_handler", "rustls"] }
reqwest    = { version = "0.12", default-features = false, features = ["json", "multipart", "cookies", "rustls-tls"] }
axum       = { version = "0.7", features = ["json"] }
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap       = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
